<resources>
    <string name="app_name">Zayed Son\'s</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_title_event_upcoming">Upcoming</string>
    <string name="tab_title_event_my_events">My Events</string>
    <string name="tab_title_event_finished">Finished</string>
    <string name="screen_label_events">Events</string>
    <string name="screen_label_home">Home</string>
    <string name="screen_label_event_detail">Event Detail</string>
    <string name="dummy_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="btn_event_join">Request to Join</string>
    <string name="btn_show_qr">Show my QR Code</string>
    <string name="label_description">Description</string>
    <string name="label_agenda">Event Agenda</string>
    <string name="label_speakers">Speakers</string>
    <string name="screen_label_event_QR">Event QR Code</string>
    <string name="openDrawer">Drawer opened</string>
    <string name="closeDrawer">Drawer Closed</string>
    <string name="validation_email_format">Please provide a valid email</string>
    <string name="hint_user_name">login</string>
    <string name="hint_password">password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">Login</string>
    <string name="label_register_ask">Don\'t have an account ?</string>
    <string name="label_register_now">Register now</string>
    <string name="label_otp_msg">Please enter the OTP sent on :</string>
    <string name="snackbar_no_network">Seems you are offline.</string>
    <string name="action_label_retry">Retry</string>
    <string name="label_something_went_wrong">Something went wrong this time. Please try again</string>
    <string name="label_SMS_couldnot_sent">We were unable to deliver OTP on provided number</string>

    <!-- strings for user profile fragment -->
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="full_name">Full Name</string>
    <string name="dob">Date Of Birth</string>
    <string name="city">City</string>
    <string name="university">University</string>
    <string name="major">Major</string>
    <string name="sponsor">Sponsor</string>
    <string name="empty_field">NA</string>
    <string name="my_card">Profile</string>
    <string name="na">NA</string>

    <!-- for OTP Screen -->
    <string name="sec">Sec</string> <!-- for seconds -->
    <string name="counter"> To resend the code</string> <!-- to till use the time remaining to resend the code -->
    <string name="resend_pin"><u>Resend now</u></string>
    <string name="code_resent">Code Re-sent</string>

    <string name="msg_join_requested">Thank You \nYour application has been submitted. You will be notified once it gets approved.</string>
    <string name="action_label_stay_here">Stay here</string>
    <string name="action_go_back">Go Back</string>
    <string name="action_label_cancel">Cancel</string>
</resources>
