<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:src="@drawable/pic_n_name"
        android:layout_weight="1"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_in_username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputTheme"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/sign_in_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_user_name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:theme="@style/TextInputTheme"
                android:textColor="@android:color/black"
                android:backgroundTint="@color/lightGrey"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_in_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary"
            android:theme="@style/TextInputTheme"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/sign_in_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:theme="@style/TextInputTheme"
                android:textColor="@android:color/black"
                android:backgroundTint="@color/lightGrey"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/forget_pass_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="@dimen/textSizeSmall"
            android:textStyle="bold"
            android:textColor="@color/maroonish"
            android:text="@string/forgot_password"/>

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/maroonishButtonStyle"
            android:layout_marginTop="10dp"
            android:text="@string/sign_in"
            android:layout_alignParentBottom="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:id="@+id/sign_in_register_now">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="@dimen/textSizeSmall"
                android:textStyle="bold"
                android:text="@string/label_register_ask"/>
            <TextView
                android:id="@+id/label_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="@dimen/textSizeSmall"
                android:textStyle="bold"
                android:textColor="@color/maroonish"
                android:layout_marginStart="10dp"
                android:text="@string/label_register_now"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>