<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:id="@+id/tag_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Event"
        style="@style/tagStyle"/>

    <TextView
        android:id="@+id/field_event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="UAE Food Lovers"
        style="@style/label_heading"/>

    <include layout="@layout/event_time_layout"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_description"
        style="@style/label_heading"/>
    <TextView
        android:id="@+id/field_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dummy_description"
        style="@style/body_text_style"/>

                    <!--Agenda Layout Starts-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_agenda"
        style="@style/label_heading"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/field_agenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dummy_description"
        style="@style/body_text_style"
        android:visibility="gone"/>
                    <!--Agenda Layout Ends-->

                    <!--Speakers Layout Starts-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_speakers"
        style="@style/label_heading"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/field_speakers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dummy_description"
        style="@style/body_text_style"
        android:visibility="gone"/>
                    <!--Speakers Layout ends-->

    <LinearLayout
        android:id="@+id/layout_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/label_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Event Gallery"
            style="@style/label_heading"
            android:visibility="visible"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/stripe_gallery_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="2dp"
                android:paddingHorizontal="2dp"
                android:orientation="horizontal">

            </android.support.v7.widget.RecyclerView>
    </LinearLayout>

</LinearLayout>